# temperature.py
@@ -1,9 +1,8 @@
-from flask import (
-    Blueprint, request, jsonify
-)
+from flask import Blueprint, request, jsonify
 from auth import login_required
 from db import get_db
-import temperatureApi
+
+import temperature_api
 
 bp = Blueprint('temperature', __name__)
 
@@ -13,28 +12,25 @@ bp = Blueprint('temperature', __name__)
 def set_temperature():
     if request.method == 'POST':
         temp = request.form['temp']
-        error = None
-
+        # error = None
         if not temp:
             return jsonify({'status': 'Temp is required.'}), 403
 
         print(temp)
         db = get_db()
         db.execute(
-            'INSERT INTO temperature (value)'
-            'VALUES (?)',
+            'INSERT INTO temperature (value) VALUES (?)',
             (temp,)
         )
         db.commit()
 
     if request.method == 'GET':
-        return temperatureApi.get_api_temperature()
+        return temperature_api.get_api_temperature()
 
     check = get_db().execute(
-        'SELECT id, timestamp, value'
-        ' FROM temperature'
-        ' ORDER BY timestamp DESC'
+        'SELECT id, timestamp, value FROM temperature ORDER BY timestamp DESC'
     ).fetchone()
+
     return jsonify({
         'status': 'Temperature succesfully recorded',
         'data': {
